simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidar-simulator
  namespace: outsight-edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidar-simulator
      sensor: lidar-01
  template:
    metadata:
      labels:
        app: lidar-simulator
        sensor: lidar-01
    spec:
      nodeSelector:
        workload: edge
      dnsPolicy: ClusterFirst
      containers:
        - name: simulator
          image: python:3.11-slim
          command: ["sh","-c","pip install --no-cache-dir pika && python -u /scripts/sim.py"]
          resources:
            requests: { cpu: 30m, memory: 64Mi }
            limits:   { cpu: 100m, memory: 128Mi }
          volumeMounts:
            - { name: script, mountPath: /scripts }
      volumes:
        - name: script
          configMap:
            name: lidar-simulator-script
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidar-simulator-02
  namespace: outsight-edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidar-simulator
      sensor: lidar-02
  template:
    metadata:
      labels:
        app: lidar-simulator
        sensor: lidar-02
    spec:
      nodeSelector:
        workload: edge
      dnsPolicy: ClusterFirst
      containers:
        - name: simulator
          image: python:3.11-slim
          command: ["sh","-c","pip install --no-cache-dir pika && python -u /scripts/sim.py"]
          resources:
            requests: { cpu: 30m, memory: 64Mi }
            limits:   { cpu: 100m, memory: 128Mi }
          volumeMounts:
            - { name: script, mountPath: /scripts }
      volumes:
        - name: script
          configMap:
            name: lidar-simulator-script
