dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kpi-dashboard
  namespace: outsight-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kpi-dashboard
  template:
    metadata:
      labels:
        app: kpi-dashboard
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-aws
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
            - name: html
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: html
          configMap:
            name: kpi-dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: kpi-dashboard
  namespace: outsight-database
spec:
  selector:
    app: kpi-dashboard
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kpi-dashboard
  namespace: outsight-database
spec:
  rules:
    - host: dash.pals.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kpi-dashboard
                port:
                  number: 80
